@@ -31,7 +31,7 @@ Sandbox_EN = {
     Sandbox_MoreTraits_SuperImmunePercent = "Superimmune Effectiveness",
     Sandbox_MoreTraits_SuperImmunePercent_tooltip = "The percent chance that a player who has the SuperImmune trait will fight-off zombification.<br>Setting this to 100% would make the player immune to zombification.<br>Note: Even if a player's immune system fights off zombification, there is still a chance they will suffer a 'Fake' Infection.",
     Sandbox_MoreTraits_GraveRobberChance = "Grave Robber: Loot Chance",
-    Sandbox_MoreTraits_GraveRobberChance_tooltip = "The percent chance that a player with the Grave Robber trait will find extra loot on a zombie corpse.<br>Setting this to 100% will make every zombie killed by the player have extra loot.",
+    Sandbox_MoreTraits_GraveRobberChance_tooltip = "The chance that a player with the Grave Robber trait will find extra loot on a zombie corpse.<br>Setting this to 1000 will make every zombie killed by the player have extra loot.",
     Sandbox_MoreTraits_GraveRobberGuaranteedLoot = "Grave Robber: Guaranteed Extra Loot",
     Sandbox_MoreTraits_GraveRobberGuaranteedLoot_tooltip = "How much guaranteed extra loot will Grave Robber's find on zombie corpses?<br>By default, a random value is determined. Increasing this value guarantees extra loot whenever loot is rolled.",
     Sandbox_MoreTraits_IndefatigableRecharge = "Indefatigable Recharge",
