@@ -97,7 +97,7 @@ option MoreTraits.ButterfingersChance
 }
 option MoreTraits.GraveRobberChance
 {
-	type = integer, min = 1, max = 100, default = 3,
+	type = integer, min = 1, max = 1000, default = 10,
 	page = MoreTraits, translation = MoreTraits_GraveRobberChance,
 }
 option MoreTraits.GraveRobberGuaranteedLoot
